Fix blur and sizing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,8 @@ body {
   height: 100vh;
   max-width: 100vw;
   max-height: 100vh;
+  height: 100dvh;
+  max-height: 100dvh;
   overflow: hidden;
   color: var(--foreground);
   background: var(--background);
@@ -42,6 +44,7 @@ body {
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(50px);
+  webkit-backdrop-filter: blur(50px);
   border: 1px solid rgba(255, 255, 255, .5);
   color: white;
 }
@@ -51,6 +54,7 @@ body {
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
   border: 1px solid rgba(255, 255, 255, .5);
   color: white;
  }
